<resources>
    <string name="app_name">FanMe</string>
    <string name="action_settings">Settings</string>
    <string name="arrowsize">24</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="connected">FanMe Connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting"> Connecting...</string>
    <string name="title_not_connected"> Not connected</string>
    <string name="button_bt"> Connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!-- Status Strings -->
    <string name="status_temperature">Ambient Temperature: %1$s &#176; C</string>
    <string name="status_humidity">Humidity: %1$s</string>
    <string name="status_surface">Surface Temperature: %1$s &#176; C</string>
    <string name="status_speed">0</string>
    <string name="status_tracking">Tracking Mode: %1$s</string>
    <string name="status_heating">Temperature: %1$s </string>

    <!-- Button Transmit Bluetooth Messages Used in tags-->
    <string name="bt_pair">pair</string>

    <string name="bt_left">left</string>
    <string name="bt_right">right</string>
    <string name="bt_down">down</string>
    <string name="bt_up">up</string>

    <string name="bt_manual">manual</string>
    <string name="bt_auto">auto</string>

    <string name="bt_hot">hot</string>
    <string name="bt_cold">cold</string>

    <string name="bt_speed_up">inc</string>
    <string name="bt_speed_down">dec</string>
    <string name="bt_stop">off</string>
    <string name="bt_calibrate">calibrate</string>


</resources>
