<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/light_blue"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/btn_ConnectBlueTooth"
            tools:layout_editor_absoluteX="24dp">


            <LinearLayout
                android:id="@+id/view_bluetooth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_ConnectBlueTooth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/button_bt" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/statuscircle"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle"
                        android:paddingRight="5dp" />

                    <TextView
                        android:id="@+id/tv_bluetooth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_connected" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/view_connected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:layout_editor_absoluteY="122dp">

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/status_temperature" />

                <TextView
                    android:id="@+id/surface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/status_surface" />

                <TextView
                    android:id="@+id/humid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/status_humidity" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Calibrate:" />

                    <Button
                        android:id="@+id/btn_cal"
                        android:layout_width="242dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="CAL"
                        android:tag ="@string/bt_calibrate"
                        android:onClick="onClick"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_setTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Set Temperature (C) :" />

                    <EditText
                        android:id="@+id/et_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="25"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/toggle2"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/pink_out_line"
                        android:checkedButton="@+id/Auto"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/btn_Manual"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="1dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_widget_background_auto"
                            android:button="@null"

                            android:gravity="center"
                            android:onClick="onClick"
                            android:tag="@string/bt_manual"
                            android:text="Manual"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/btn_Auto"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_widget_background_auto"
                            android:button="@null"
                            android:checked="true"
                            android:gravity="center"
                            android:onClick="onClick"
                            android:tag="@string/bt_auto"
                            android:text="Auto"
                            android:textColor="@color/white" />
                    </RadioGroup>

                    <Space
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioGroup
                        android:id="@+id/toggle"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/pink_out_line"
                        android:checkedButton="@+id/offer"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.43"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="510dp">

                        <RadioButton
                            android:id="@+id/mode_hot"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="1dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_widget_background"
                            android:button="@null"
                            android:checked="true"
                            android:gravity="center"
                            android:onClick="onClick"
                            android:tag="@string/bt_hot"
                            android:text="Hot"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/mode_cold"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_widget_background"
                            android:button="@null"
                            android:gravity="center"
                            android:onClick="onClick"
                            android:tag="@string/bt_cold"
                            android:text="Cold"
                            android:textColor="@color/white" />
                    </RadioGroup>

                </LinearLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    tools:layout_editor_absoluteY="84dp" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/view_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_dec"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_remove_circle_black_24dp"
                    android:onClick="onClick"
                    android:tag="@string/bt_speed_down" />/>

                <include
                    android:id="@+id/btn_stop_speed"
                    layout="@layout/circle_num"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="6dp"
                    android:layout_toRightOf="@+id/btn_dec"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:tag="@string/bt_stop"></include>

                <Button
                    android:id="@+id/btn_inc"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="0dp"
                    android:layout_toRightOf="@+id/btn_stop_speed"
                    android:layout_weight="1"
                    android:background="@drawable/ic_add_circle_black_24dp"
                    android:onClick="onClick"
                    android:tag="@string/bt_speed_up" />/>
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:background="@drawable/ic_keyboard_arrow_up_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:tag = "@string/bt_up"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="83dp"
            android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_up"
            android:tag = "@string/bt_down"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btn_left"
            android:layout_width="81dp"
            android:layout_height="124dp"
            android:layout_marginBottom="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:onClick="onClick"
            android:tag="@string/bt_left"
            app:layout_constraintBottom_toBottomOf="@+id/btn_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_up"
            app:layout_constraintVertical_bias="0.764" />

        <Button
            android:id="@+id/btn_right"
            android:layout_width="82dp"
            android:layout_height="119dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:onClick="onClick"
            android:tag="@string/bt_right"
            app:layout_constraintBottom_toBottomOf="@+id/btn_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.863"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_up" />

        <TextView
            android:id="@+id/txt_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="Manual Control"
            android:textSize="16pt"
            app:layout_constraintBottom_toTopOf="@+id/btn_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    </android.support.constraint.ConstraintLayout>

    <!--<include layout="@layout/content_main" />-->


</android.support.design.widget.CoordinatorLayout>